--- a/sass/components/_section-title.scss
+++ b/sass/components/_section-title.scss
@@ -10,8 +10,10 @@
   color: inherit;
 
   &--small {
-    font-size: 28px;
-    line-height: 1.18;
+    @media screen and (max-width: 1199px) {
+      font-size: 28px;
+      line-height: 1.18;
+    }
   }
 
   &--bright {
