--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -25,8 +25,10 @@
 }
 
 .header__reg-button {
-  margin-bottom: 20px;
   color: $secondary-title-color;
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 20px;
+  }
 }
 
 .nav-menu__reg-button {
