--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -11,4 +11,10 @@
     padding-left: 39px;
     padding-right: 39px;
   }
+
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
