--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,6 +1,17 @@
-.about__container {
+.about {
   padding-top: 84px;
   padding-bottom: 84px;
+  @media screen and (min-width: 768px) {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    @media screen and (min-width: 1200px) {
+      padding-top: 139px;
+      padding-bottom: 121px;
+    }
+  }
+}
+
+.about__container {
   @media screen and (min-width: 768px) {
     display: flex;
   }
@@ -12,15 +23,31 @@
   @media screen and (min-width: 768px) {
     display: block;
   }
+  @media screen and (min-width: 1200px) {
+    margin-right: 64px;
+  }
 }
 
-.about__item:not(:last-child) {
-  margin-bottom: 30px;
+.about__list {
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
 }
 
-.about__img {
+.about__item {
   @media screen and (min-width: 768px) {
     width: 330px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+  }
+  &:not(:last-child) {
+    @media screen and (max-width: 1199px) {
+      margin-bottom: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+      margin-right: 30px;
+    }
   }
 }
 
@@ -32,7 +59,7 @@
   &--small {
     margin-bottom: 40px;
     font-size: 14px;
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
       margin-bottom: 24px;
     }
   }
