--- a/sass/layout/_pricing.scss
+++ b/sass/layout/_pricing.scss
@@ -7,6 +7,10 @@
     padding-top: 100px;
     padding-bottom: 100px;
   }
+  @media screen and (min-width: 1200px) {
+    padding-top: 130px;
+    padding-bottom: 130px;
+  }
 }
 
 .pricing::after {
@@ -46,9 +50,16 @@
   z-index: 1;
 }
 
+.pricing__wrapper {
+  margin-bottom: 50px;
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
+}
+
 .pricing__list {
   padding-top: 30px;
-  padding-bottom: 50px;
+  padding-bottom: 30px;
   padding-left: 30px;
   padding-right: 30px;
 
@@ -57,16 +68,43 @@
   line-height: 2.14;
   color: $service-text-color;
 
-  background: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
+  @media screen and (max-width: 1199px) {
+    background: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
+  }
+  @media screen and (min-width: 1200px) {
+    width: 50%;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  &--light {
+    @media screen and (min-width: 1200px) {
+      background: linear-gradient(
+        180deg,
+        #171a24 0%,
+        rgba(23, 26, 36, 0.2) 100%
+      );
+    }
+  }
+
+  &--dark {
+    @media screen and (min-width: 1200px) {
+      background: linear-gradient(
+        180deg,
+        #090b13 0%,
+        rgba(9, 11, 19, 0.2) 100%
+      );
+    }
+  }
 }
 
 .pricing__item {
   display: flex;
   justify-content: space-between;
   align-items: baseline;
-  &:not(:last-child) {
-    margin-bottom: 20px;
-  }
+  margin-bottom: 20px;
 
   &::after {
     content: "";
@@ -76,6 +114,10 @@
     background-color: rgba(157, 164, 189, 0.12);
     flex-grow: 1;
   }
+}
+
+.pricing__list--dark > .pricing__item:last-child {
+  margin-bottom: 0;
 }
 
 .pricing__cost {
