--- a/sass/layout/_contacts.scss
+++ b/sass/layout/_contacts.scss
@@ -7,6 +7,10 @@
     padding-top: 100px;
     padding-bottom: 100px;
   }
+  @media screen and (min-width: 1200px) {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 }
 
 .contacts::after {
