--- a/sass/layout/_galery.scss
+++ b/sass/layout/_galery.scss
@@ -5,13 +5,20 @@
     padding-top: 100px;
     padding-bottom: 100px;
   }
+  @media screen and (min-width: 1200px) {
+    padding-top: 130px;
+    padding-bottom: 130px;
+  }
 }
 
 .galery__list {
   @media screen and (min-width: 768px) {
     display: flex;
-    flex-wrap: wrap;
     margin: -15px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    flex-wrap: wrap;
   }
 }
 
@@ -20,12 +27,13 @@
     width: calc((100% - 4 * 15px) / 2);
     margin: 15px;
   }
+  &:not(:last-child) {
+    @media screen and (max-width: 767px) {
+      margin-bottom: 30px;
+    }
+  }
 }
 
 .galery__section-description {
   margin-bottom: 44px;
-}
-
-.galery__item:not(:last-child) {
-  margin-bottom: 30px;
 }
