--- a/sass/layout/_reviews.scss
+++ b/sass/layout/_reviews.scss
@@ -7,16 +7,31 @@
   }
 }
 
-.reviews__text {
-  margin-bottom: 44px;
+.reviews__container {
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+}
 
+.reviews__content {
+  margin-bottom: 44px;
+}
+
+.reviews__text {
   font-size: 18px;
   line-height: 1.67;
+  @media screen and (min-width: 1200px) {
+    max-width: 500px;
+  }
 }
 
 .reviews__list {
   display: flex;
   flex-wrap: wrap;
+  @media screen and (min-width: 1200px) {
+    margin-right: 130px;
+  }
 }
 
 .reviews__item {
