--- a/sass/layout/_staff.scss
+++ b/sass/layout/_staff.scss
@@ -6,6 +6,10 @@
     padding-top: 100px;
     padding-bottom: 100px;
   }
+  @media screen and (min-width: 1200px) {
+    padding-top: 130px;
+    padding-bottom: 130px;
+  }
 }
 
 .staff__section-title {
@@ -13,14 +17,22 @@
 }
 
 .staff__list {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     width: 450px;
     margin: 0 auto;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
   }
 }
 
 .staff__item:not(:last-child) {
-  margin-bottom: 64px;
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 64px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
+  }
 }
 
 .staff__card {
