--- a/sass/layout/_contacts.scss
+++ b/sass/layout/_contacts.scss
@@ -8,8 +8,16 @@
     padding-bottom: 100px;
   }
   @media screen and (min-width: 1200px) {
-    padding-top: 0;
-    padding-bottom: 0;
+    width: 640px;
+    padding-top: 130px;
+    padding-bottom: 130px;
+  }
+
+  &__container {
+    @media screen and (min-width: 1200px) {
+      padding-left: 100px;
+      padding-right: 100px;
+    }
   }
 }
 
@@ -30,12 +38,10 @@
   background-size: cover;
   background-repeat: no-repeat;
   opacity: 0.2;
-}
 
-@media (min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .contacts::after {
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
     background-image: linear-gradient(
         to right,
         rgba(157, 164, 189, 0.2),
@@ -43,18 +49,47 @@
       ),
       url(../images/contacts@2x.jpg);
   }
-}
 
-@media (min-device-pixel-ratio: 3),
-  (min-resolution: 288dpi),
-  (min-resolution: 3dppx) {
-  .contacts::after {
+  @media (min-device-pixel-ratio: 3),
+    (min-resolution: 288dpi),
+    (min-resolution: 3dppx) {
     background-image: linear-gradient(
         to right,
         rgba(157, 164, 189, 0.2),
         rgba(157, 164, 189, 0.2)
       ),
       url(../images/contacts@3x.jpg);
+  }
+
+  @media screen and (min-width: 1200px) {
+    background-image: linear-gradient(
+        to right,
+        rgba(157, 164, 189, 0.2),
+        rgba(157, 164, 189, 0.2)
+      ),
+      url(../images/contacts-desk.jpg);
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(157, 164, 189, 0.2),
+          rgba(157, 164, 189, 0.2)
+        ),
+        url(../images/contacts-desk@2x.jpg);
+    }
+
+    @media (min-device-pixel-ratio: 3),
+      (min-resolution: 288dpi),
+      (min-resolution: 3dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(157, 164, 189, 0.2),
+          rgba(157, 164, 189, 0.2)
+        ),
+        url(../images/contacts-desk@3x.jpg);
+    }
   }
 }
 
@@ -70,7 +105,7 @@
 }
 
 .contacts__wrapper {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     display: flex;
   }
 }
