--- a/sass/layout/_registration.scss
+++ b/sass/layout/_registration.scss
@@ -1,3 +1,14 @@
+.reg-contacts-wrapper {
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    justify-content: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
 .registration {
   padding-top: 84px;
   padding-bottom: 84px;
@@ -7,14 +18,16 @@
     padding-bottom: 100px;
   }
   @media screen and (min-width: 1200px) {
-    padding-top: 0;
-    padding-bottom: 0;
+    width: 640px;
+    padding-top: 130px;
+    padding-bottom: 130px;
   }
-}
 
-.reg-contacts-wrapper {
-  @media screen and (min-width: 1200px) {
-    display: flex;
+  &__container {
+    @media screen and (min-width: 1200px) {
+      padding-left: 40px;
+      padding-right: 40px;
+    }
   }
 }
 
